# system-trace

./: .gitignore  CHANGELOG.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
app/: package.json  pnpm-lock.yaml
app/src/: App.tsx
app/src-tauri/: Cargo.toml
app/src-tauri/src/: blocker.rs  collector.rs  commands.rs  crypto.rs  db.rs  grayscale.rs  icon.rs  lib.rs  models.rs  state.rs
app/src-tauri/src/platform/: linux.rs  linux_wayland.rs  linux_x11.rs  macos.rs  mod.rs  windows.rs
app/src/components/: AppAvatar.tsx  AppGoals.tsx  LimitLockout.tsx  Topbar.tsx
app/src/lib/: api.ts  i18n.ts  notify.ts  pdf.ts  types.ts  update.ts
app/src/pages/: Apps.tsx  Dashboard.tsx  Focus.tsx  Onboarding.tsx  Reports.tsx  Settings.tsx  Wellbeing.tsx
docs/: FEATURES.md  SYSTEM_DESIGN.md  verification_walkthrough.md  windows-icon-verification.md  windows-installer-verification.md
extension/: README.md  background.js  manifest.json  popup.html  popup.js
